# saviour

./: .gitignore  COMPLETE_SETUP_GUIDE.md  README_QUICKSTART.md  detailed.json  mint-test-ip.sh  nested_git_management.md  o.json  start.sh  stop.sh
AI/: DEPLOYMENT_GUIDE.md  HPING_ATTACK_GUIDE.md  README_FIREWALL.md  TRAFFIC_ANALYZER_GUIDE.md  ai_firewall_proxy.py  app.py  data_preprocessing.py  ddos.py  debug_import_inference.py  eda_visualization.py  explain_xgb_prediction.py  firewall_config.yaml  firewall_monitor.py  firewall_report_20251202_165728.txt  hping_attack_detector.py  hping_attack_detector_ml.py  inference.py  inspect_pickle.py  log.txt  model_development.py  passive_traffic_monitor.py  requirements.txt  search_pickle_bytes.py  start_analyzer.bat  start_hping_detector.bat  start_passive_monitor.bat  test_firewall.py  traffic_analyzer.py
AI/hping-detector-node/: .gitignore  README.md  index.js  log.txt  package-lock.json  package.json
AI/mlruns/0/: meta.yaml
AI/mlruns/292035082538934683/: meta.yaml
AI/mlruns/292035082538934683/534e3a4a5a3a4834bab7d495523d9d4c/: meta.yaml
AI/mlruns/292035082538934683/534e3a4a5a3a4834bab7d495523d9d4c/metrics/: cv_best_f1_weighted  test_accuracy  test_f1_weighted  test_precision_weighted  test_recall_weighted
AI/mlruns/292035082538934683/534e3a4a5a3a4834bab7d495523d9d4c/outputs/m-63eff8f0c66a44b3871a7f42014f1fb9/: meta.yaml
AI/mlruns/292035082538934683/534e3a4a5a3a4834bab7d495523d9d4c/tags/: mlflow.runName
AI/mlruns/292035082538934683/72d04266289144158252f1c18cccdd24/: meta.yaml
AI/mlruns/292035082538934683/72d04266289144158252f1c18cccdd24/metrics/: cv_best_f1_weighted  test_accuracy  test_f1_weighted  test_precision_weighted  test_recall_weighted
AI/mlruns/292035082538934683/72d04266289144158252f1c18cccdd24/outputs/m-76dee63d9d5849789a341495fb5642e2/: meta.yaml
AI/mlruns/292035082538934683/72d04266289144158252f1c18cccdd24/tags/: mlflow.runName
AI/mlruns/292035082538934683/e2c2d676c25f46b89b2866f931fd50b0/: meta.yaml
AI/mlruns/292035082538934683/e2c2d676c25f46b89b2866f931fd50b0/metrics/: cv_best_f1_weighted  test_accuracy  test_f1_weighted  test_precision_weighted  test_recall_weighted
AI/mlruns/292035082538934683/e2c2d676c25f46b89b2866f931fd50b0/outputs/m-274513939c9140aab8809136aa6921a8/: meta.yaml
AI/mlruns/292035082538934683/e2c2d676c25f46b89b2866f931fd50b0/tags/: mlflow.runName
AI/mlruns/292035082538934683/models/m-274513939c9140aab8809136aa6921a8/: meta.yaml
AI/mlruns/292035082538934683/models/m-274513939c9140aab8809136aa6921a8/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
AI/mlruns/292035082538934683/models/m-274513939c9140aab8809136aa6921a8/metrics/: cv_best_f1_weighted  test_accuracy  test_f1_weighted  test_precision_weighted  test_recall_weighted
AI/mlruns/292035082538934683/models/m-63eff8f0c66a44b3871a7f42014f1fb9/: meta.yaml
AI/mlruns/292035082538934683/models/m-63eff8f0c66a44b3871a7f42014f1fb9/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
AI/mlruns/292035082538934683/models/m-63eff8f0c66a44b3871a7f42014f1fb9/metrics/: cv_best_f1_weighted  test_accuracy  test_f1_weighted  test_precision_weighted  test_recall_weighted
AI/mlruns/292035082538934683/models/m-76dee63d9d5849789a341495fb5642e2/: meta.yaml
AI/mlruns/292035082538934683/models/m-76dee63d9d5849789a341495fb5642e2/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
AI/mlruns/292035082538934683/models/m-76dee63d9d5849789a341495fb5642e2/metrics/: cv_best_f1_weighted  test_accuracy  test_f1_weighted  test_precision_weighted  test_recall_weighted
analysis_server/: API_DOCUMENTATION.md  package-lock.json  package.json
analysis_server/src/: server.js
analysis_server/src/api/: blockchain.js
analysis_server/src/utils/: blockchain-utils.js
bloc-saviour/: API_IMPLEMENTATION_GUIDE.md  Cargo.toml  FIXES_APPLIED.md  README.md
bloc-saviour/docs/: DEVELOPER_GUIDE.md  storage-strategy.md
bloc-saviour/pallets/access-control/: Cargo.toml
bloc-saviour/pallets/access-control/src/: lib.rs
bloc-saviour/pallets/ip-token/: Cargo.toml
bloc-saviour/pallets/ip-token/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
bloc-saviour/pallets/template/: Cargo.toml
bloc-saviour/runtime/: Cargo.toml
bloc-saviour/runtime/src/: lib.rs
bloc-saviour/runtime/src/configs/: mod.rs
blockchain/: libpallet_access_control.d  libpallet_access_control.rlib  libpallet_ip_token.d  libpallet_ip_token.rlib  libpallet_template.d  libpallet_template.rlib  libsolochain_template_runtime.d  solochain-template-node.d
blocsavior-ui/: BLOCKCHAIN_INTEGRATION.md  BUILD_SUMMARY.md  FRONTEND_README.md  NFT_INTEGRATION.md  QUICK_START.md  RUN_COMMANDS.md  check-dashboard.js  integrate-blockchain.sh  package.json
blocsavior-ui/app/: globals.css  layout.tsx  page.tsx
blocsavior-ui/app/ip-tokens/: page.tsx
blocsavior-ui/app/malicious/: page.tsx
blocsavior-ui/app/search/: page.tsx
blocsavior-ui/app/transactions/: page.tsx
blocsavior-ui/components/: Footer.tsx  Navigation.tsx  QuickReportButton.tsx
blocsavior-ui/docs/: MOCK_VS_REAL_DATA.md  REAL_BLOCKCHAIN_INTEGRATION.md
blocsavior-ui/lib/api/: blockchain-real.ts  blockchain.ts
blocsavior-ui/lib/types/: blockchain.ts
blocsavior-ui/lib/utils/: blockchain-utils.ts
blocsavior-ui/scripts/: check-blockchain.js
ddos/: .gitignore  API_INTEGRATION.md  LOCALHOST_FIX.md  ML_README.md  ML_UPDATE_SUMMARY.md  check-pallet.js  check-tokens.js  detailed.json  o.json  package-lock.json  package.json  proxies.json  simulate-ddos.sh  sync-threats.js  test-localhost-tracking.sh  test-ml-integration.js  train-model-v2.js  train-model.js
ddos/attack/: cli.js  load-test-simple.js  proxy-scraper.js  stress-test.js
ddos/public/: index.html
ddos/server/: app.js
ddos/server/ml-model/: model.json  normalization.json  weights.json
server/: IMPLEMENTATION.md  QUICKSTART.md  README.md  app.py  dev.sh  requirements.txt  run.sh  start.sh  test_blockchain.py  test_server.py
