[workspace]
resolver = "2"

members = [
	"node",
	"pallets/ip-token",
	"pallets/access-control",
	"pallets/template",
	"runtime",
]

[workspace.package]
authors = ["Bloc Saviour Team"]
edition = "2021"
repository = "https://github.com/substrate-developer-hub/substrate-node-template.git"
license = "Unlicense"
homepage = "https://substrate.io"

[workspace.dependencies]
# Polkadot SDK dependencies
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-info = { version = "2.11.1", default-features = false }

# FRAME
frame-benchmarking = { path = "../polkadot-sdk/substrate/frame/benchmarking", default-features = false }
frame-benchmarking-cli = { path = "../polkadot-sdk/substrate/utils/frame/benchmarking-cli", default-features = false }
frame-executive = { path = "../polkadot-sdk/substrate/frame/executive", default-features = false }
frame-support = { path = "../polkadot-sdk/substrate/frame/support", default-features = false }
frame-system = { path = "../polkadot-sdk/substrate/frame/system", default-features = false }
frame-try-runtime = { path = "../polkadot-sdk/substrate/frame/try-runtime", default-features = false }
frame-system-benchmarking = { path = "../polkadot-sdk/substrate/frame/system/benchmarking", default-features = false }
frame-system-rpc-runtime-api = { path = "../polkadot-sdk/substrate/frame/system/rpc/runtime-api", default-features = false }
frame-metadata-hash-extension = { path = "../polkadot-sdk/substrate/frame/metadata-hash-extension", default-features = false }

# Substrate Pallets
pallet-aura = { path = "../polkadot-sdk/substrate/frame/aura", default-features = false }
pallet-balances = { path = "../polkadot-sdk/substrate/frame/balances", default-features = false }
pallet-grandpa = { path = "../polkadot-sdk/substrate/frame/grandpa", default-features = false }
pallet-sudo = { path = "../polkadot-sdk/substrate/frame/sudo", default-features = false }
pallet-timestamp = { path = "../polkadot-sdk/substrate/frame/timestamp", default-features = false }
pallet-transaction-payment = { path = "../polkadot-sdk/substrate/frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc = { path = "../polkadot-sdk/substrate/frame/transaction-payment/rpc", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "../polkadot-sdk/substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }

# Substrate Primitives
sp-api = { path = "../polkadot-sdk/substrate/primitives/api", default-features = false }
sp-block-builder = { path = "../polkadot-sdk/substrate/primitives/block-builder", default-features = false }
sp-blockchain = { path = "../polkadot-sdk/substrate/primitives/blockchain", default-features = false }
sp-consensus-aura = { path = "../polkadot-sdk/substrate/primitives/consensus/aura", default-features = false }
sp-consensus-grandpa = { path = "../polkadot-sdk/substrate/primitives/consensus/grandpa", default-features = false }
sp-core = { path = "../polkadot-sdk/substrate/primitives/core", default-features = false }
sp-genesis-builder = { path = "../polkadot-sdk/substrate/primitives/genesis-builder", default-features = false }
sp-inherents = { path = "../polkadot-sdk/substrate/primitives/inherents", default-features = false }
sp-io = { path = "../polkadot-sdk/substrate/primitives/io", default-features = false }
sp-keyring = { path = "../polkadot-sdk/substrate/primitives/keyring", default-features = false }
sp-offchain = { path = "../polkadot-sdk/substrate/primitives/offchain", default-features = false }
sp-runtime = { path = "../polkadot-sdk/substrate/primitives/runtime", default-features = false }
sp-session = { path = "../polkadot-sdk/substrate/primitives/session", default-features = false }
sp-std = { path = "../polkadot-sdk/substrate/primitives/std", default-features = false }
sp-storage = { path = "../polkadot-sdk/substrate/primitives/storage", default-features = false }
sp-timestamp = { path = "../polkadot-sdk/substrate/primitives/timestamp", default-features = false }
sp-transaction-pool = { path = "../polkadot-sdk/substrate/primitives/transaction-pool", default-features = false }
sp-version = { path = "../polkadot-sdk/substrate/primitives/version", default-features = false }

# Substrate Client
sc-basic-authorship = { path = "../polkadot-sdk/substrate/client/basic-authorship", default-features = false }
sc-cli = { path = "../polkadot-sdk/substrate/client/cli", default-features = false }
sc-client-api = { path = "../polkadot-sdk/substrate/client/api", default-features = false }
sc-consensus = { path = "../polkadot-sdk/substrate/client/consensus/common", default-features = false }
sc-consensus-aura = { path = "../polkadot-sdk/substrate/client/consensus/aura", default-features = false }
sc-consensus-grandpa = { path = "../polkadot-sdk/substrate/client/consensus/grandpa", default-features = false }
sc-executor = { path = "../polkadot-sdk/substrate/client/executor", default-features = false }
sc-network = { path = "../polkadot-sdk/substrate/client/network", default-features = false }
sc-offchain = { path = "../polkadot-sdk/substrate/client/offchain", default-features = false }
sc-rpc-api = { path = "../polkadot-sdk/substrate/client/rpc-api", default-features = false }
sc-service = { path = "../polkadot-sdk/substrate/client/service", default-features = false }
sc-telemetry = { path = "../polkadot-sdk/substrate/client/telemetry", default-features = false }
sc-transaction-pool = { path = "../polkadot-sdk/substrate/client/transaction-pool", default-features = false }
sc-transaction-pool-api = { path = "../polkadot-sdk/substrate/client/transaction-pool/api", default-features = false }

# Build & Other
substrate-build-script-utils = { path = "../polkadot-sdk/substrate/utils/build-script-utils", default-features = false }
substrate-frame-rpc-system = { path = "../polkadot-sdk/substrate/utils/frame/rpc/system", default-features = false }
substrate-wasm-builder = { path = "../polkadot-sdk/substrate/utils/wasm-builder", default-features = false }
pallet-template = { path = "pallets/template", default-features = false }
solochain-template-runtime = { path = "runtime", default-features = false }

# External dependencies
clap = { version = "4.5.3" }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.24" }
serde = { version = "1.0.197" }
serde_json = { version = "1.0.114" }

[profile.release]
panic = "unwind"
